apply/joomla-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joomla-deployment
  labels:
    app: cms
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cms
      name: joomla-pod  
  template:
    metadata:
      name: joomla-pod
      labels:
        app: cms
        name: joomla-pod
    spec:
      containers:
      - name: joomla
        image: joomla:latest
        ports:
        - containerPort: 80
