apply/mysql-stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  serviceName: mysql
  replicas: 1  
  selector:
    matchLabels:
      app: cms
      name: mysql-pod
  template:
    metadata:
      name: mysql-pod
      labels:
        app: cms
        name: mysql-pod
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-storage
  volumeClaimTemplates:
  - metadata:
      name: mysql-storage
    spec:
      accessModes: 
        - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
