apply/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  labels:
    app: cms
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cms
      name: wordpress-pod  
  template:
    metadata:
      name: wordpress-pod
      labels:
        app: cms
        name: wordpress-pod
    spec:
      containers:
      - name: wordpress
        image: wordpress:latest
        ports:
        - containerPort: 80
