apply/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  selector:
    app: cms
    name: mysql-pod
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
