apply/joomla.yaml
apiVersion: v1
kind: Service
metadata:
  name: joomla
spec:
  selector:
    app: cms
    name: joomla-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
