apply/wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  selector:
    app: cms
    name: wordpress-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
