apply/cms-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
#    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - cmsid.crabdance.com
    secretName: userapi-tls
  ingressClassName: nginx
  rules:
  - host: "cmsid.crabdance.com"
    http:
      paths:
      - path: /wordpress
        pathType: Prefix
        backend:
          service:
            name: wordpress
            port:
              number: 80
      - path: /wp
        pathType: Prefix
        backend:
          service:
            name: wordpress
            port:
              number: 80
      - path: /joomla
        pathType: Prefix
        backend:
          service:
            name: joomla
            port:
              number: 80
      - path: /in
        pathType: Prefix
        backend:
          service:
            name: joomla
            port:
              number: 80
